--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -448,5 +448,17 @@
   "createClosetCalendarDescription": "选择您感兴趣的穿搭，并查看所有相关物品以创建衣橱。",
   "viewDailyCalendarDescription": "查看当天穿搭的所有详情，包括活动名称、评论和穿搭反馈.",
   "encourageComment": "你还没有为这套搭配添加评论！",
-  "startFreeTrial": "开始免费试用"
+  "startFreeTrial": "开始免费试用",
+  "usageAnalyticsTitle": "使用分析",
+  "tabItemAnalytics": "单品分析",
+  "tabOutfitAnalytics": "穿搭分析",
+  "totalItems": "总单品数",
+  "totalCost": "总花费",
+  "avgPricePerWear": "平均每次穿着成本",
+  "viewSummaryItemAnalyticsDescription": "用数据掌控衣橱——总花费、物品数量、每次穿搭成本，一目了然。",
+  "viewOutfitAnalyticsDescription": "发现你的穿搭风格——看看你喜欢、犹豫或想调整的比例。",
+  "usageAnalyticsFeatureTitle": "你的衣橱洞察",
+  "outfitRelatedOutfitsDescription": "探索更多穿搭灵感——根据你的主穿搭找到相似造型。",
+  "itemWithRelatedOutfitsDescription": "看看这件单品出现在哪些穿搭里——你的风格，由你定义。",
+  "createClosetItemAnalyticsDescription": "用现有衣物打造你的理想胶囊衣橱。"
 }
