Insert a warning pop up for declutter. Consolidate to use 1 grid

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -128,6 +128,10 @@
   "gift": "Gift",
   "Throw": "Throw",
   "declutterOptions": "What would you like to do?",
+  "areYouSure": "Are you sure?",
+  "declutterThrowWarning": "Once you confirm, this item will disappear from your closet view permanently.\n\nHave you considered donating or upcycling instead?",
+  "declutterGenericWarning": "Once you confirm, this item will disappear from your closet view permanently.",
+  "confirm": "Confirm",
   "itemsUploadedTooltip": "Number of items you've uploaded to your conscious closet",
   "currentStreakTooltip": "Your current streak of no purchases",
   "highestStreakTooltip": "Your highest no-purchase streak ever!",
