--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -128,6 +128,10 @@
   "gift": "赠送",
   "Throw": "丢弃",
   "declutterOptions": "您想做什么？",
+  "areYouSure": "你确定吗？",
+  "declutterThrowWarning": "一旦确认，该物品将从你的衣橱中永久消失\n\n你是否考虑过捐赠或升级改造？",
+  "declutterGenericWarning": "一旦确认，该物品将从你的衣橱中永久消失。",
+  "confirm": "确认",
   "itemsUploadedTooltip": "您上传到环保衣橱的物品数量",
   "currentStreakTooltip": "您的当前无购买记录",
   "highestStreakTooltip": "您历史最长的无购买记录！",
