Got the summary items usage analytics summary card working

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -456,9 +456,9 @@
   "usageAnalyticsTitle": "Usage Analytics",
   "tabItemAnalytics": "Item Analytics",
   "tabOutfitAnalytics": "Outfit Analytics",
-  "totalItems": "Total Items",
-  "totalCost": "Total Cost",
-  "avgPricePerWear": "Avg Price Per Wear",
+  "totalItems": "Total\nItems",
+  "totalCost": "Total\nCost",
+  "avgPricePerWear": "Avg Price\nPer Wear",
   "viewSummaryItemAnalyticsDescription": "See your closet in numbers—total cost, item count, and cost per wear, all at a glance.",
   "viewOutfitAnalyticsDescription": "Discover your style story—track how often you love, feel unsure about, or rethink your outfits.",
   "usageAnalyticsFeatureTitle": "Your Closet Insights",
