Update the price per wear and also implemented clothings not worn toggle, and update RPC for summary usage analytics hope that works

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -374,6 +374,8 @@
   "advancedFiltersTab": "Advanced Filters",
   "allClosetLabel": "All Closet",
   "selectClosetLabel": "Select Closet",
+  "onlyItemsUnworn": "Only Unworn Items",
+  "allItems": "All Items",
   "saveFilter": "Save Filter",
   "noClosetsAvailable": "No closets available",
   "closetName": "Closet Name",
@@ -456,9 +458,9 @@
   "usageAnalyticsTitle": "Usage Analytics",
   "tabItemAnalytics": "Item Analytics",
   "tabOutfitAnalytics": "Outfit Analytics",
-  "totalItems": "Total\nItems",
-  "totalCost": "Total\nCost",
-  "avgPricePerWear": "Avg Price\nPer Wear",
+  "totalItems": "Total Items",
+  "totalCost": "Total Cost",
+  "avgPricePerWear": "Avg Cost Per Wear",
   "viewSummaryItemAnalyticsDescription": "See your closet in numbers—total cost, item count, and cost per wear, all at a glance.",
   "viewOutfitAnalyticsDescription": "Discover your style story—track how often you love, feel unsure about, or rethink your outfits.",
   "usageAnalyticsFeatureTitle": "Your Closet Insights",
