Refactor the validation in edit item page, however still need to get rid of the globalKey

--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -122,7 +122,7 @@
   "interested": "有兴趣",
   "editPageTitle": "编辑物品",
   "thankYou": "谢谢！",
-  "interestAcknowledged": "已记录您的兴趣——敬请期待更新！🎉",
+  "interestAcknowledged": "已记录您的兴趣—敬请期待更新！🎉",
   "sell": "出售",
   "swap": "交换",
   "gift": "赠送",
@@ -156,7 +156,7 @@
   "upload_failed": "哎呀！看起来出了点问题。再试一次？🚂",
   "errorIncrement": "哎呀！我们无法记录您的兴趣。请再试一次！",
   "declutterAcknowledged": "干得好！您的衣橱得到了整理！😌",
-  "errorDeclutter": "我们暂时无法整理您的衣橱，但别担心——我们会尽快再试！🌿",
+  "errorDeclutter": "我们暂时无法整理您的衣橱，但别担心—我们会尽快再试！🌿",
   "declutterFeatureTitle": "整理您的衣橱",
   "declutterFeatureDescription": "通过移除不需要的物品，轻松组织并清理您的衣橱。简化您的衣橱，为新风格腾出空间。",
   "unexpectedResponseFormat": "嗯，发生了一些意外。请再试一次或联系支持。",
@@ -175,7 +175,7 @@
   "cancel": "取消",
   "delete": "删除",
   "please_select_the_category_above": "请先选择上方的类别",
-  "noAchievementFound": "尚无成就——今天就开始解锁吧！",
+  "noAchievementFound": "尚无成就—今天就开始解锁吧！",
   "congratulations": "恭喜！🎉",
   "achievementMessage": "您解锁了一个新成就：",
   "arrange": "衣橱布局",
@@ -184,7 +184,7 @@
   "filterSearchPremiumFeature": "高级筛选？",
   "quicklyFindItems": "我们考虑添加高级筛选功能，以帮助您更快找到物品。这个功能好吗？",
   "multiClosetFeatureTitle": "多个衣橱？",
-  "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（永久、消失）——您会使用吗？",
+  "multiClosetFeatureDescription": "我们正在探索添加多个衣橱（永久、消失）—您会使用吗？",
   "MultiClosetFeatureTitle": "管理您的多衣橱",
   "viewMultiClosetDescription": "探索您的多衣橱选项。您可以创建一个新的多衣橱，\n从所有多衣橱中编辑物品，或对单个多衣橱进行修改。",
   "createMultiClosetDescription": "创建一个新的多衣橱，整理物品并添加元数据以保持衣橱有序。",
@@ -203,7 +203,7 @@
   "calendarPremiumFeature": "日历视图？",
   "reviewOutfitsInCalendar": "我们正在考虑为您的造型添加日历视图。这有助于您保持组织吗？",
   "swapFeatureTitle": "交换物品？",
-  "swapFeatureDescription": "有兴趣交换物品或收到附近交换活动的通知吗？我们正在考虑这个功能——您怎么看？",
+  "swapFeatureDescription": "有兴趣交换物品或收到附近交换活动的通知吗？我们正在考虑这个功能—您怎么看？",
   "AnalyticsSearchPremiumFeature": "对使用分析感到好奇吗？",
   "trackAnalyticsDescription": "我们正在探索如何帮助您跟踪物品的穿着成本，并提供个性化的穿搭洞察。这个功能对您有帮助吗？",
   "ok": "好的",
@@ -272,7 +272,7 @@
   "noNewClothes405Achievement": "环保选择的冠军！",
   "noNewClothes405AchievementMessage": "405天了！您对环保时尚的承诺令人鼓舞。",
   "noNewClothes630Achievement": "可持续发展的领袖！",
-  "noNewClothes630AchievementMessage": "630天不买新衣——您正在引领潮流！继续加油！",
+  "noNewClothes630AchievementMessage": "630天不买新衣—您正在引领潮流！继续加油！",
   "noNewClothes900Achievement": "改变的先驱者！",
   "noNewClothes900AchievementMessage": "900天的环保选择！您正在时尚领域树立可持续发展新标杆！",
   "noNewClothes1215Achievement": "可持续时尚偶像！",
@@ -462,11 +462,11 @@
   "totalItems": "总单品数",
   "totalCost": "总花费",
   "avgPricePerWear": "平均每次穿着成本",
-  "viewSummaryItemAnalyticsDescription": "用数据掌控衣橱——总花费、物品数量、每次穿搭成本，一目了然。",
-  "viewOutfitAnalyticsDescription": "发现你的穿搭风格——看看你喜欢、犹豫或想调整的比例。",
+  "viewSummaryItemAnalyticsDescription": "用数据掌控衣橱—总花费、物品数量、每次穿搭成本，一目了然。",
+  "viewOutfitAnalyticsDescription": "发现你的穿搭风格—看看你喜欢、犹豫或想调整的比例。",
   "usageAnalyticsFeatureTitle": "你的衣橱洞察",
-  "outfitRelatedOutfitsDescription": "探索更多穿搭灵感——根据你的主穿搭找到相似造型。",
-  "itemWithRelatedOutfitsDescription": "看看这件单品出现在哪些穿搭里——你的风格，由你定义。",
+  "outfitRelatedOutfitsDescription": "探索更多穿搭灵感—根据你的主穿搭找到相似造型。",
+  "itemWithRelatedOutfitsDescription": "看看这件单品出现在哪些穿搭里—你的风格，由你定义。",
   "createClosetItemAnalyticsDescription": "用现有衣物打造你的理想胶囊衣橱。",
   "analyticsSummary": "你在过去的 {daysTracked} 天里创建了 {totalReviews} 套穿搭在{closetShown}。",
   "summaryItemAnalytics": "物品洞察",
