Ensure the errors in edit page can be translatable

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -108,16 +108,16 @@
   "previous": "Previous",
   "itemNameFieldNotFilled": "Item Name field is not filled.",
   "amountSpentFieldNotFilled": "Amount Spent field is not filled.",
-  "itemTypeFieldNotFilled": "Item Type field is not filled.",
-  "occasionFieldNotFilled": "Occasion field is not filled.",
-  "seasonFieldNotFilled": "Season field is not filled.",
-  "specificTypeFieldNotFilled": "Specific Type field is not filled.",
-  "clothingLayerFieldNotFilled": "Clothing Layer field is not filled.",
-  "colourFieldNotFilled": "Colour field is not filled.",
-  "colourVariationFieldNotFilled": "Colour Variation field is not filled.",
-  "clothingTypeRequired": "Clothing type is required.",
-  "accessoryTypeRequired": "Accessory type is required.",
-  "shoesTypeRequired": "Shoes type is required.",
+  "itemTypeFieldNotFilled": "Item Type field is not selected.",
+  "occasionFieldNotFilled": "Occasion field is not selected.",
+  "seasonFieldNotFilled": "Season field is not selected.",
+  "specificTypeFieldNotFilled": "Specific Type field is not selected.",
+  "clothingLayerFieldNotFilled": "Clothing Layer field is not selected.",
+  "colourFieldNotFilled": "Colour field is not selected.",
+  "colourVariationFieldNotFilled": "Colour Variation field is not selected.",
+  "clothingTypeRequired": "Clothing type is not selected.",
+  "accessoryTypeRequired": "Accessory type is not selected.",
+  "shoesTypeRequired": "Shoes type is not selected.",
   "pleaseCorrectTheErrors": "Please correct the errors in the form.",
   "interested": "Interested",
   "editPageTitle": "Edit Item",
