--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -108,16 +108,16 @@
   "previous": "上一步",
   "itemNameFieldNotFilled": "物品名称未填写。",
   "amountSpentFieldNotFilled": "花费金额未填写。",
-  "itemTypeFieldNotFilled": "物品类型未填写。",
-  "occasionFieldNotFilled": "场合未填写。",
-  "seasonFieldNotFilled": "季节未填写。",
-  "specificTypeFieldNotFilled": "具体类型未填写。",
-  "clothingLayerFieldNotFilled": "服装层次未填写。",
-  "colourFieldNotFilled": "颜色未填写。",
-  "colourVariationFieldNotFilled": "颜色变化未填写。",
-  "clothingTypeRequired": "服装类型是必需的。",
-  "accessoryTypeRequired": "配饰类型是必需的。",
-  "shoesTypeRequired": "鞋类类型是必需的。",
+  "itemTypeFieldNotFilled": "物品类型未选择。",
+  "occasionFieldNotFilled": "场合未选择。",
+  "seasonFieldNotFilled": "季节未选择。",
+  "specificTypeFieldNotFilled": "具体类型未选择。",
+  "clothingLayerFieldNotFilled": "服装层次未选择。",
+  "colourFieldNotFilled": "颜色未选择。",
+  "colourVariationFieldNotFilled": "颜色变化未选择。",
+  "clothingTypeRequired": "服装类型未选择。",
+  "accessoryTypeRequired": "配饰类型未选择。",
+  "shoesTypeRequired": "鞋类类型未选择。",
   "pleaseCorrectTheErrors": "请更正表单中的错误。",
   "interested": "有兴趣",
   "editPageTitle": "编辑物品",
