First draft of pending photo library

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -254,6 +254,7 @@
   "camera_edit_item_permission_explanation": "Let us use your camera to update your item photos.",
   "camera_selfie_permission_explanation": "We need access to your camera for your stunning outfit selfies!",
   "camera_permission_explanation": "Camera access is required to take photos.",
+  "photo_library_permission_explanation": "We need access to your photo library so you can select and upload your favorite outfits.",
   "general_permission_explanation": "We need this permission to make the app work properly.",
   "open_settings": "Open Settings",
   "noImage": "No Image Available",
