--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -482,5 +482,6 @@
   "bulkUpload": "Upload",
   "totalItemsTooltip": "Here’s the total count of what you’ve selected! (This selection: total items)",
   "totalCostTooltip": "Every piece is an investment—here’s what you've spent! (This selection: total cost)",
-  "costPerWearTooltip": "A lower cost per wear means you're getting great value! (Total cost ÷ times worn)"
+  "costPerWearTooltip": "A lower cost per wear means you're getting great value! (Total cost ÷ times worn)",
+  "maxPendingItemsSnackbar": "You can only select up to {maxAllowed} images."
 }
