Made navigation easier by forcing users to update their pending items before uploading more items, if coming from myCloset, and also implemented the SVGs, however there is a need to flatten all the SVGs.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -489,5 +489,23 @@
   "failedToLoadMoreImages": "Failed to load more images",
   "uploadSuccessTitle": "Upload Successful",
   "uploadSuccessContent": "Would you like to upload more items from your photo library?",
-  "yes": "Yes"
+  "yes": "Yes",
+  "machine": "Machine",
+  "dryClean": "Dry Clean",
+  "handWash": "Hand Wash",
+  "doNotWash": "Do Not Wash",
+  "natural": "Natural",
+  "blend": "Blend",
+  "semiSynthetic": "Semi-Synthetic",
+  "synthetic": "Synthetic",
+  "brandNewWithTag": "Brand New\nwith Tag",
+  "brandNewWithoutTag": "Brand New\nwithout Tag",
+  "likeNew": "Like\nNew",
+  "gentlyUsed": "Gently\nUsed",
+  "wellLoved": "Well\nLoved",
+  "viewPendingUpload": "View Pending Upload",
+  "personalStyle": "Personal Style",
+  "overFlowingCloset": "Overflowing Closet",
+  "parentMemories": "Parent Memories"
+
 }
