Was able to address the disposal of the app, so that it works properly, and also refactor the edit Item button and metadata so that it can be reusable. Which is amazing, now, only need to update one.
Going to refactor the photo too, so that refactoring will be easier, and use go_router, making life easier for me.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -489,6 +489,8 @@
   "failedToLoadMoreImages": "Failed to load more images",
   "uploadSuccessTitle": "Upload Successful",
   "uploadSuccessContent": "Would you like to upload more items from your photo library?",
+  "editPendingSuccessTitle": "Update Successful",
+  "editPendingSuccessContent": "Would you like to update more pending items from your photo library, so they can be used to create outfits in your closet?",
   "yes": "Yes",
   "machine": "Machine",
   "dryClean": "Dry Clean",
