--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -484,6 +484,7 @@
   "totalCostTooltip": "每件衣物都是一种投资——这是您的总支出！(当前选择：总花费)",
   "costPerWearTooltip": "穿得越多，越划算！(总花费 ÷ 穿着次数)",
   "maxPendingItemsSnackbar": "你最多只能选择 {maxAllowed} 张图片。",
+  "approachingLimitSnackbar": "您还可以上传 {maxAllowed} 张。之后将达到当前上限。",
   "noPhotosFound": "未找到照片",
   "failedToLoadImages": "加载图片失败",
   "failedToLoadMoreImages": "加载更多图片失败",
