Update the version number, got the first draft of tutorial and address issues of creating multiple items from photo library

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -65,6 +65,7 @@
   "social": "Social",
   "event": "Event",
   "upload_upload": "Upload",
+  "editItem": "Edit Item",
   "filter_filter": "Filter",
   "swap_item": "Swap QR",
   "chooseSwap": "Choose Swap",
@@ -424,16 +425,16 @@
   "trialEndedMessage": "Your premium trial period has ended.",
   "trialEndedNextSteps": "Premium features are now locked. Access them anytime by  making a one-time purchase.",
   "trialStartedTitle": "Explore Premium Benefits",
-  "trialStartedMessage": "These are all the premium features you can explore. Do you want to start your 30-day free trial now?",
+  "trialStartedMessage": "Experience all the premium perks for 30 days. Totally free. No credit card needed.",
   "trialStartedNextSteps": "You have successfully activated your premium features. All premium features are now available to enhance your experience.",
   "trialStartedNextStepsTitle": "Trial Activated!",
   "trialIncludedTitle": "What’s included in your trial",
-  "trialIncludedFilter": "Filters to filter your items more easily",
-  "trialIncludedCustomize": "Customize grid size and sort items by cost per wear, updated date, and more.",
-  "trialIncludedClosets": "Create and manage multiple closets (permanent and disappearing closets)",
-  "trialIncludedOutfits": "Create multiple outfits a day",
-  "trialIncludedCalendar": "Allow you to view previous outfits in a calendar format and integrate with multi-closet feature.",
-  "trialIncludedDrawerInsights": "Allow you to analyze your items’ cost per wear and provide personalized outfit insights.",
+  "trialIncludedFilter": "Easily find what you need with advanced filters.",
+  "trialIncludedCustomize": "Customize your closet view – adjust grid size and sort by cost per wear, last worn, and more.",
+  "trialIncludedClosets": "Create multiple closets – from permanent staples to seasonal disappearing wardrobes.",
+  "trialIncludedOutfits": "Style and save as many outfits as you like, every day.",
+  "trialIncludedCalendar": "Look back at your outfits on a calendar and link them across your closets.",
+  "trialIncludedDrawerInsights": "Get smart insights into your wardrobe – track cost per wear and discover outfit ideas tailored to you.",
   "eventName": "Event Name",
   "allFeedback": "All",
   "calendarFeatureTitle": "Calendar",
@@ -511,5 +512,37 @@
   "overFlowingCloset": "Overflowing Closet",
   "parentMemories": "Parent Memories",
   "photoAccessDialogTitle": "Give Full Access?",
-  "photoAccessDialogContent": "To see your entire photo library and avoid being asked again, grant full access in Settings."
+  "photoAccessDialogContent": "To see your entire photo library and avoid being asked again, grant full access in Settings.",
+  "tutorialFreeUploadCameraUploadClothing": "Upload your clothing into the closet",
+  "tutorialFreeEditCameraDeclutterItems": "Declutter your items",
+  "tutorialFreeCreateOutfitCreateOutfitProcess": "Process of creating outfits",
+  "tutorialFreeCreateOutfitReviewOutfit": "Review your daily outfit",
+  "tutorialFreeCreateOutfitOutfitSuggestion": "Not sure what to wear today?",
+  "tutorialPaidFilterFindInCloset": "Find clothing in a huge closet",
+  "tutorialPaidFilterSellUnworn": "Sell unworn clothing",
+  "tutorialPaidFilterTrackFiltering": "Don't lose track of filtering",
+  "tutorialPaidCustomizeViewAllItems": "See all items in one glance",
+  "tutorialPaidCustomizeCustomizeOrder": "Customize your ordering",
+  "tutorialPaidMultiClosetCreateCapsule": "Create capsule closets",
+  "tutorialPaidMultiClosetViewUsableItems": "View items usable today",
+  "tutorialPaidMultiClosetCreatePublicClosets": "Create public closets for future sales",
+  "tutorialPaidMultiClosetDeleteClosets": "Delete excess closets",
+  "tutorialPaidMultiClosetSwapClosets": "Swap items to another closet",
+  "tutorialPaidCalendarTrackFirstExperiences": "Track first experiences",
+  "tutorialPaidCalendarPlanTrips": "Easily create outfits for trip planning",
+  "tutorialPaidUsageAnalyticsCostPerWear": "Know clothing cost per wear",
+  "tutorialPaidUsageAnalyticsOutfitSuggestions": "Figure out what to wear today",
+  "tutorialPaidUsageAnalyticsInspirationForTrips": "Get outfit inspiration for trips",
+  "tutorialPaidUsageAnalyticsSellUnworn": "Sell unworn clothing",
+  "errorSavingTutorialProgress": "Something went wrong while saving your tutorial progress.",
+  "iAmReady": "I'm ready",
+  "tutorialFreeUploadCameraTitle": "Upload Clothes with Your Camera",
+  "tutorialFreeEditCameraTitle": "Edit Items You’ve Captured",
+  "tutorialFreeCreateOutfitTitle": "Mix and Match Outfits",
+  "tutorialPaidFilterTitle": "Unlock Advanced Filters",
+  "tutorialPaidCustomizeTitle": "Customize Your Experience",
+  "tutorialPaidMultiClosetTitle": "Switch Between Multiple Closets",
+  "tutorialPaidCalendarTitle": "Plan Your Outfits with a Calendar",
+  "tutorialPaidUsageAnalyticsTitle": "Track Your Usage and Progress",
+  "tutorialHubTitle": "Explore Features"
 }
