--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -65,6 +65,7 @@
   "social": "社交",
   "event": "活动",
   "upload_upload": "上传",
+  "editItem": "修改衣物",
   "filter_filter": "筛选",
   "swap_item": "交换二维码",
   "chooseSwap": "选择交换",
@@ -424,16 +425,16 @@
   "trialEndedMessage": "您的高级功能试用期已结束。",
   "trialEndedNextSteps": "高级功能现已锁定。您可以随时通过一次性购买来解锁这些功能。",
   "trialStartedTitle": "探索高级权益",
-  "trialStartedMessage": "这些是您可以探索的所有高级功能。您想立即开始您的 30 天免费试用吗？",
+  "trialStartedMessage": "轻松开启30天高级体验，无需信用卡，无任何附加条件。",
   "trialStartedNextSteps": "您已成功激活高级功能。所有高级功能现已可用，以提升您的体验。",
   "trialStartedNextStepsTitle": "试用已激活！",
   "trialIncludedTitle": "试用包含的功能",
-  "trialIncludedFilter": "更轻松筛选物品的过滤器",
-  "trialIncludedCustomize": "自定义网格大小，并按每次穿着成本、更新日期等排序物品。",
-  "trialIncludedClosets": "创建和管理多个衣橱（永久衣橱和隐藏衣橱）",
-  "trialIncludedOutfits": "每天创建多个穿搭",
-  "trialIncludedCalendar": "允许你以日历格式查看以前的穿搭，并与多重衣橱功能集成",
-  "trialIncludedDrawerInsights": "允许你分析物品的每次穿搭成本，并提供个性化的穿搭建议",
+  "trialIncludedFilter": "通过高级筛选，轻松找到你想要的衣物。",
+  "trialIncludedCustomize": "自定义衣柜视图，可按穿搭成本、最近穿着时间等排序。",
+  "trialIncludedClosets": "创建多个衣柜——包括常用衣柜和季节性消失衣柜。",
+  "trialIncludedOutfits": "每天都可以搭配并保存多套穿搭。",
+  "trialIncludedCalendar": "通过日历查看过往穿搭，并支持多衣柜联动展示。",
+  "trialIncludedDrawerInsights": "深入了解你的衣物使用情况，分析穿搭成本，获取专属搭配建议。",
   "eventName": "活动名称",
   "allFeedback": "所有",
   "calendarFeatureTitle": "日历",
@@ -511,5 +512,37 @@
   "overFlowingCloset": "爆满衣橱",
   "parentMemories": "父母回忆",
   "photoAccessDialogTitle": "允许完整访问？",
-  "photoAccessDialogContent": "如需查看整个相册并避免再次提示，请在设置中启用完整访问。"
+  "photoAccessDialogContent": "如需查看整个相册并避免再次提示，请在设置中启用完整访问。",
+  "tutorialFreeUploadCameraUploadClothing": "将你的衣物上传至衣柜",
+  "tutorialFreeEditCameraDeclutterItems": "清理你的衣物",
+  "tutorialFreeCreateOutfitCreateOutfitProcess": "创建穿搭的流程",
+  "tutorialFreeCreateOutfitReviewOutfit": "回顾你的每日穿搭",
+  "tutorialFreeCreateOutfitOutfitSuggestion": "不知道今天穿什么？",
+  "tutorialPaidFilterFindInCloset": "在大量衣物中查找",
+  "tutorialPaidFilterSellUnworn": "出售未穿的衣物",
+  "tutorialPaidFilterTrackFiltering": "不要迷失在筛选中",
+  "tutorialPaidCustomizeViewAllItems": "一目了然地查看所有衣物",
+  "tutorialPaidCustomizeCustomizeOrder": "自定义排列顺序",
+  "tutorialPaidMultiClosetCreateCapsule": "创建胶囊衣柜",
+  "tutorialPaidMultiClosetViewUsableItems": "查看今天可穿衣物",
+  "tutorialPaidMultiClosetCreatePublicClosets": "为转售创建公开衣柜",
+  "tutorialPaidMultiClosetDeleteClosets": "删除多余的衣柜",
+  "tutorialPaidMultiClosetSwapClosets": "将衣物移动到另一个衣柜",
+  "tutorialPaidCalendarTrackFirstExperiences": "追踪首次穿搭体验",
+  "tutorialPaidCalendarPlanTrips": "为旅行计划穿搭",
+  "tutorialPaidUsageAnalyticsCostPerWear": "了解每件衣物的穿搭成本",
+  "tutorialPaidUsageAnalyticsOutfitSuggestions": "今天穿什么？",
+  "tutorialPaidUsageAnalyticsInspirationForTrips": "获取旅行穿搭灵感",
+  "tutorialPaidUsageAnalyticsSellUnworn": "出售不再穿的衣物",
+  "errorSavingTutorialProgress": "保存教程进度时出错",
+  "iAmReady": "我准备好了",
+  "tutorialFreeUploadCameraTitle": "使用相机上传衣物",
+  "tutorialFreeEditCameraTitle": "编辑你拍摄的物品",
+  "tutorialFreeCreateOutfitTitle": "搭配你的穿搭",
+  "tutorialPaidFilterTitle": "解锁高级筛选功能",
+  "tutorialPaidCustomizeTitle": "自定义你的体验",
+  "tutorialPaidMultiClosetTitle": "切换多个衣橱",
+  "tutorialPaidCalendarTitle": "使用日历规划穿搭",
+  "tutorialPaidUsageAnalyticsTitle": "追踪使用情况和进度",
+  "tutorialHubTitle": "探索功能"
 }
