Implemented first draft of tutorial, use it to build it further

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -508,9 +508,11 @@
   "gentlyUsed": "Gently\nUsed",
   "wellLoved": "Well\nLoved",
   "viewPendingUpload": "View Pending Upload",
-  "personalStyle": "Personal Style",
-  "overFlowingCloset": "Overflowing Closet",
-  "parentMemories": "Parent Memories",
+  "personalStyle": "Rediscover My Style",
+  "lifeChange": "Start a New Chapter",
+  "parentMemories": "Closet for My Little One",
+  "whyAreYouHereToday": "Why are you here today?",
+  "tailorExperience": "We’ll tailor your Closet Conscious experience based on what matters to you most right now.\n\nNot sure? Pick what feels right — you can always update it later.",
   "photoAccessDialogTitle": "Give Full Access?",
   "photoAccessDialogContent": "To see your entire photo library and avoid being asked again, grant full access in Settings.",
   "tutorialFreeUploadCameraUploadClothing": "Upload your clothing into the closet",
