--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -508,9 +508,11 @@
   "gentlyUsed": "轻微\n使用",
   "wellLoved": "使用\n痕迹明显",
   "viewPendingUpload": "查看待上传",
-  "personalStyle": "个人风格",
-  "overFlowingCloset": "爆满衣橱",
-  "parentMemories": "父母回忆",
+  "personalStyle": "找回我的风格",
+  "lifeChange": "开启新篇章",
+  "parentMemories": "为我的宝贝建立衣橱",
+  "whyAreYouHereToday": "你今天为什么来到 衣格思觉？",
+  "tailorExperience": "我们希望根据你当下最在意的事，为你量身定制 衣格思觉 的体验。\n\n还不确定？先选一个最有共鸣的方向吧，以后随时可以更改。",
   "photoAccessDialogTitle": "允许完整访问？",
   "photoAccessDialogContent": "如需查看整个相册并避免再次提示，请在设置中启用完整访问。",
   "tutorialFreeUploadCameraUploadClothing": "将你的衣物上传至衣柜",
